# smart_home

./: readme.md
homework2/: Cargo.toml  readme.md
homework2/src/lib/: lib.rs  room.rs
homework3/: readme.md
homework3/src/lib/: control.rs  home.rs  lib.rs
homework4/: Cargo.toml  readme.md
homework4/src/examples/: smarthome_example.rs
homework4/src/lib/: devices.rs  helper_traits.rs  power_plug.rs  thermometer.rs
homework5/: readme.md
homework5/src/examples/: smarthome_example.rs
homework5/src/lib/: control.rs  devices.rs  home.rs  lib.rs  power_plug.rs  room.rs  thermometer.rs
homework6/src/examples/: smarthome_example.rs
homework6/src/lib/: helper_traits.rs  home.rs  lib.rs  room.rs  thermometer.rs
homework7/: Cargo.toml  readme.md
homework7/src/lib/: control.rs  devices.rs  lib.rs  power_plug.rs  state.rs
src/: control.rs  lib.rs  main.rs  power_plug.rs  thermometer.rs
