[package]
name = "smart_home"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slice_as_array = "1.1.0"

[lib]
name = "smarthome_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "test_server"
path = "src/bin/server.rs"

[[bin]]
name = "test_client"
path = "src/bin/client.rs"